# fredusmarketbrief

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  conftest.py  requirements.txt
.github/workflows/: daily.yml
db/: subscribers.sql
design-market-brief-references/: capture-status.tsv  index.md
docs/superpowers/plans/: 2026-07-02-telegram-subscription-broadcast.md
docs/superpowers/specs/: 2026-07-02-telegram-subscription-broadcast-design.md
market-briefing-poster-references/: index.md
market-infographics/: index.md
samples/: sample_market_data.json
scripts/: make_qr.py  set_webhook.py
src/: __init__.py  config.py  infographic.py  main.py  market_data.py  models.py  narrative.py  storage.py  subscribers.py  telegram_sender.py  whatsapp_sender.py
templates/: compass.html.j2  infographic.html.j2
tests/: test_config.py  test_infographic.py  test_main.py  test_market_data.py  test_narrative.py  test_storage.py  test_subscribers.py  test_telegram_sender.py  test_webhook.py  test_whatsapp_sender.py
tools/: get_chat_id.py
webhook/: README.md  pyproject.toml
webhook/api/: telegram_webhook.py
